A new version of PHPT runner is out. It changes parsing of sections TEST, ARGS and FILE_EXTERNAL: only the first line is read now (as required/recommended by the specification).

For complete list of changes since previous version, see CHANGELOG.md.