@@ -19,6 +19,8 @@ final class ParserTest extends TestCase
         $this->assertSame("<?php echo \"skip\"; ?>", $result->skipCode);
         $this->assertSame([], $result->conflictingKeys);
         $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("", $result->input);
         $this->assertSame([], $result->iniSettings);
         $this->assertSame("", $result->arguments);
@@ -44,6 +46,8 @@ final class ParserTest extends TestCase
         $this->assertSame("", $result->skipCode);
         $this->assertSame([], $result->conflictingKeys);
         $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("", $result->input);
         $this->assertSame([], $result->iniSettings);
         $this->assertSame("", $result->arguments);
@@ -69,6 +73,8 @@ final class ParserTest extends TestCase
         $this->assertSame("", $result->skipCode);
         $this->assertSame([], $result->conflictingKeys);
         $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("", $result->input);
         $this->assertSame([], $result->iniSettings);
         $this->assertSame("", $result->arguments);
@@ -94,6 +100,8 @@ final class ParserTest extends TestCase
         $this->assertSame("", $result->skipCode);
         $this->assertSame([], $result->conflictingKeys);
         $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("", $result->input);
         $this->assertSame([], $result->iniSettings);
         $this->assertSame("--one=abc --two def", $result->arguments);
@@ -119,6 +127,8 @@ final class ParserTest extends TestCase
         $this->assertSame("", $result->skipCode);
         $this->assertSame([], $result->conflictingKeys);
         $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("", $result->input);
         $this->assertSame(["allow_url_fopen" => "0", ], $result->iniSettings);
         $this->assertSame("", $result->arguments);
@@ -144,6 +154,8 @@ final class ParserTest extends TestCase
         $this->assertSame("", $result->skipCode);
         $this->assertSame([], $result->conflictingKeys);
         $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("first line" . PHP_EOL . "second line", $result->input);
         $this->assertSame([], $result->iniSettings);
         $this->assertSame("", $result->arguments);
@@ -169,6 +181,8 @@ final class ParserTest extends TestCase
         $this->assertSame("", $result->skipCode);
         $this->assertSame([], $result->conflictingKeys);
         $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("", $result->input);
         $this->assertSame([], $result->iniSettings);
         $this->assertSame("", $result->arguments);
@@ -194,6 +208,8 @@ final class ParserTest extends TestCase
         $this->assertSame("", $result->skipCode);
         $this->assertSame([], $result->conflictingKeys);
         $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("", $result->input);
         $this->assertSame([], $result->iniSettings);
         $this->assertSame("", $result->arguments);
@@ -219,6 +235,8 @@ final class ParserTest extends TestCase
         $this->assertSame("", $result->skipCode);
         $this->assertSame(["one", "two", ], $result->conflictingKeys);
         $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("", $result->input);
         $this->assertSame([], $result->iniSettings);
         $this->assertSame("", $result->arguments);
@@ -244,6 +262,8 @@ final class ParserTest extends TestCase
         $this->assertSame("", $result->skipCode);
         $this->assertSame([], $result->conflictingKeys);
         $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("", $result->input);
         $this->assertSame([], $result->iniSettings);
         $this->assertSame("", $result->arguments);
@@ -275,6 +295,8 @@ final class ParserTest extends TestCase
         $this->assertSame("", $result->skipCode);
         $this->assertSame([], $result->conflictingKeys);
         $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("", $result->input);
         $this->assertSame([], $result->iniSettings);
         $this->assertSame("", $result->arguments);
@@ -300,6 +322,8 @@ final class ParserTest extends TestCase
         $this->assertSame("", $result->skipCode);
         $this->assertSame([], $result->conflictingKeys);
         $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("", $result->input);
         $this->assertSame([], $result->iniSettings);
         $this->assertSame("", $result->arguments);
@@ -325,6 +349,8 @@ final class ParserTest extends TestCase
         $this->assertSame("", $result->skipCode);
         $this->assertSame([], $result->conflictingKeys);
         $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("", $result->input);
         $this->assertSame([], $result->iniSettings);
         $this->assertSame("", $result->arguments);
@@ -350,6 +376,8 @@ final class ParserTest extends TestCase
         $this->assertSame("", $result->skipCode);
         $this->assertSame([], $result->conflictingKeys);
         $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("", $result->input);
         $this->assertSame([], $result->iniSettings);
         $this->assertSame("", $result->arguments);
@@ -375,6 +403,8 @@ final class ParserTest extends TestCase
         $this->assertSame("", $result->skipCode);
         $this->assertSame([], $result->conflictingKeys);
         $this->assertSame(["json", "abc", ], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame([], $result->cookies);
         $this->assertSame("", $result->input);
         $this->assertSame([], $result->iniSettings);
         $this->assertSame("", $result->arguments);
@@ -387,6 +417,60 @@ final class ParserTest extends TestCase
         $this->assertSame(false, $result->flaky);
         $this->assertSame([], $result->expectedHeaders);
         $this->assertSame("test123", $result->expectedText);
+        $this->assertSame("", $result->expectedTextFile);
+        $this->assertSame("", $result->expectedPattern);
+        $this->assertSame("", $result->expectedPatternFile);
+        $this->assertSame("", $result->expectedRegex);
+        $this->assertSame("", $result->expectedRegexFile);
+        $this->assertSame("", $result->cleanCode);
+
+        $result = $parser->parse(__DIR__ . DIRECTORY_SEPARATOR . "test_get.phpt");
+        $this->assertSame("Test get", $result->testName);
+        $this->assertSame("", $result->testDescription);
+        $this->assertSame("", $result->skipCode);
+        $this->assertSame([], $result->conflictingKeys);
+        $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame(["one" => "abc", "two" => ["def", "ghi", ], ], $result->getData);
+        $this->assertSame([], $result->cookies);
+        $this->assertSame("", $result->input);
+        $this->assertSame([], $result->iniSettings);
+        $this->assertSame("", $result->arguments);
+        $this->assertSame([], $result->envVariables);
+        $this->assertSame("<?php echo \$_GET[\"two\"][1]; ?>", $result->testCode);
+        $this->assertSame("", $result->testFile);
+        $this->assertSame([], $result->testRedirects);
+        $this->assertTrue($result->requiresCgiBinary);
+        $this->assertSame(false, $result->supposedToFail);
+        $this->assertSame(false, $result->flaky);
+        $this->assertSame([], $result->expectedHeaders);
+        $this->assertSame("ghi", $result->expectedText);
+        $this->assertSame("", $result->expectedTextFile);
+        $this->assertSame("", $result->expectedPattern);
+        $this->assertSame("", $result->expectedPatternFile);
+        $this->assertSame("", $result->expectedRegex);
+        $this->assertSame("", $result->expectedRegexFile);
+        $this->assertSame("", $result->cleanCode);
+
+        $result = $parser->parse(__DIR__ . DIRECTORY_SEPARATOR . "test_cookies.phpt");
+        $this->assertSame("Test cookies", $result->testName);
+        $this->assertSame("", $result->testDescription);
+        $this->assertSame("", $result->skipCode);
+        $this->assertSame([], $result->conflictingKeys);
+        $this->assertSame([], $result->requiredExtensions);
+        $this->assertSame([], $result->getData);
+        $this->assertSame(["one" => "abc", "two" => "def", ], $result->cookies);
+        $this->assertSame("", $result->input);
+        $this->assertSame([], $result->iniSettings);
+        $this->assertSame("", $result->arguments);
+        $this->assertSame([], $result->envVariables);
+        $this->assertSame("<?php echo \$_COOKIE[\"one\"]; ?>", $result->testCode);
+        $this->assertSame("", $result->testFile);
+        $this->assertSame([], $result->testRedirects);
+        $this->assertTrue($result->requiresCgiBinary);
+        $this->assertSame(false, $result->supposedToFail);
+        $this->assertSame(false, $result->flaky);
+        $this->assertSame([], $result->expectedHeaders);
+        $this->assertSame("abc", $result->expectedText);
         $this->assertSame("", $result->expectedTextFile);
         $this->assertSame("", $result->expectedPattern);
         $this->assertSame("", $result->expectedPatternFile);
